--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -8,6 +8,6 @@
     %svelte.head%
   </head>
   <body>
-    <div id="svelte">%svelte.body%</div>
+    <div id="svelte" class="h-screen">%svelte.body%</div>
   </body>
 </html>
